--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "postcss": "^7",
     "vue": "^2.6.11",
-    "vue-axios": "^3.2.4"
+    "vue-axios": "^3.2.4",
+    "vue-json-pretty": "^2.0.2",
+    "vue-tailwind": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
