--- a/production/pom.xml
+++ b/production/pom.xml
@@ -114,6 +114,25 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.2</version>
+<!--                <configuration>-->
+<!--                    <layers>-->
+<!--                        <enabled>true</enabled>-->
+<!--                    </layers>-->
+<!--                    <image>-->
+<!--                        <name>production:${project.version}</name>-->
+<!--                        <env>-->
+<!--                            <BP_JVM_VERSION>15</BP_JVM_VERSION>-->
+<!--                        </env>-->
+<!--                    </image>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>build-image</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
             </plugin>
         </plugins>
     </build>
