--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-json-pretty": "^2.0.2",
+    "vue-qrcode-reader": "^2.3.17",
     "vue-tailwind": "^2.1.3"
   },
   "devDependencies": {
