--- a/production/src/main/resources/application.yml
+++ b/production/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
         jdbc:
           lob:
             non_contextual_creation: true
