--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,3 +28,11 @@ jobs:
       - name: Maven Verify
         working-directory: ./production
         run: mvn -B clean verify
+
+  build-docker-image:
+    name: Build docker image
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
