--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,6 +14,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: mirromutth/mysql-action@v1.1
+      - with:
+          host port: 3306
+          container port: 3306
+          character set server: 'utf8'
+          collation server: 'utf8_general_ci'
+          mysql version: 'latest'
+          mysql database: 'production_line'
+          mysql user: 'root'
+          mysql password: 'root'
+
       - uses: actions/checkout@v2
       - name: Set up JDK
         uses: actions/setup-java@v1
