--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,8 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: mirromutth/mysql-action@v1.1
-      - with:
+      - name: Set up MySQL
+        uses: mirromutth/mysql-action@v1.1
+        with:
           host port: 3306
           container port: 3306
           character set server: 'utf8'
