--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,12 +14,12 @@ jobs:
     name: Running Java ${{ matrix.java }} compile
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK
+      - name: Set up JDK 15
         uses: actions/setup-java@v1
         with:
-          - java-version: 1.15
+          java-version: 1.15
       - name: Compile code
-        run: mvn compile
+         run: mvn compile
 
 
   test:
