--- a/client-app/package.json
+++ b/client-app/package.json
@@ -1,6 +1,8 @@
 {
   "name": "client-app",
   "version": "0.1.0",
+  "description":  "School project semester 6",
+  "author": "Rik Peeters",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -17,9 +19,15 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "axios": "^0.21.1",
+    "chalk": "^2.4.2",
     "core-js": "^3.6.5",
+    "ora": "^3.4.0",
+    "portfinder": "^1.0.28",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
+    "rimraf": "^2.7.1",
+    "semver": "^6.3.0",
+    "shelljs": "^0.8.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
@@ -52,6 +60,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^4.3.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
