--- a/production/src/main/resources/application.yml
+++ b/production/src/main/resources/application.yml
@@ -28,10 +28,10 @@ spring:
       #      ddl-auto: create-drop
       dialect: org.hibernate.dialect.MySQL57Dialect
       ddl-auto: create-drop
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
         jdbc:
           lob:
             non_contextual_creation: true
