--- a/article/src/main/resources/application.yml
+++ b/article/src/main/resources/application.yml
@@ -20,8 +20,10 @@ spring:
       fail_on_empty_beans: false
   #============JDBC============
   datasource:
-    url: jdbc:mysql://localhost:3306/article?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mariadb://localhost:3306/article
     username: root
+    driver-class-name: org.mariadb.jdbc.Driver
+    password: root
 
   #============JPA============
   jpa:
