--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,28 +28,15 @@ jobs:
     name: Test & Package
     needs: compile
 
-#    services:
-#      mysql:
-#        image: mysql:5.7
-#        env:
-#          MYSQL_USER: root
-#          MYSQL_PASSWORD:
-#          MYSQL_PORT: 3306
-#          MYSQL_DATABASE: production_line
-#          MYSQL_ROOT_PASSWORD: root
-#        ports:
-#          - 3306
-#        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     steps:
       - uses: getong/mariadb-action@v1.1
         with:
-          character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-          collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
+          character set server: 'utf8'
+          collation server: 'utf8_general_ci'
           mysql database: 'article'
-          mysql root password: ${{ secrets.ROOTPASSWORD }} # Required if "mysql user" is empty, default is empty. The root superuser password
-          mysql user: 'root' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-          mysql password: ${{ secrets.DATABASEPASSWORD }} # Required if "mysql user" exists. The password for the "mysql user"
+          mysql root password: ${{ secrets.ROOTPASSWORD }}
+          mysql user: 'root'
+          mysql password: ${{ secrets.DATABASEPASSWORD }}
       - uses: actions/checkout@v2
       - name: Set up JDK
         uses: actions/setup-java@v1
