--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -1,4 +1,4 @@
-name: Article
+name: Article microservic CI/CD
 
 on:
   push:
@@ -7,6 +7,10 @@ on:
     paths:
       - 'article/**'
 
+env:
+  IMAGE: article_microservice
+  HOSTNAME: eu.gcr.io
+  PROJECT_ID: ${{ secrets.PROJECT_ID
 
 jobs:
   compile:
@@ -22,6 +26,36 @@ jobs:
         working-directory: ./article
         run: mvn compile
 
+  code_quality:
+    name: SonarCloud code qualitity check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 15
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.15
+      - name: SonarCloud Scan
+        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN_ARTICLE }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_ARTICLE }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
   test:
     runs-on: ubuntu-latest
