--- a/article/pom.xml
+++ b/article/pom.xml
@@ -15,6 +15,9 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>15</java.version>
+        <sonar.projectKey>flowcontrol.article</sonar.projectKey>
+        <sonar.organization>rikp777</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
