--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -10,7 +10,7 @@ on:
 env:
   IMAGE: article_microservice
   HOSTNAME: eu.gcr.io
-  PROJECT_ID: ${{ secrets.PROJECT_ID
+  PROJECT_ID: ${{ secrets.PROJECT_ID }}
 
 jobs:
   compile:
@@ -31,14 +31,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Set up JDK 15
         uses: actions/setup-java@v1
         with:
           java-version: 1.15
-      - name: SonarCloud Scan
-        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN_ARTICLE }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
