--- a/production/src/main/resources/application.yml
+++ b/production/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     default-property-inclusion: NON_ABSENT
   #============JDBC============
   datasource:
-    url: jdbc:mariadb://localhost:3306/production
+    url: jdbc:mariadb://localhost:3306/authservice
     username: root
     driver-class-name: org.mariadb.jdbc.Driver
     password: root
