--- a/zuul-service/src/main/resources/application.yml
+++ b/zuul-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: zuul-server
+    name: zuul-service
 
 
 server:
@@ -13,7 +13,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 
   instance:
-    appname: zuul-server
+    appname: zuul-service
     metadataMap:
       instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}:${random.value}}
 
