--- a/gateway-authservice/pom.xml
+++ b/gateway-authservice/pom.xml
@@ -147,9 +147,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
-
-<!--        <dependency>-->
+        <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-gateway</artifactId>-->
 <!--            <version>2.2.7.RELEASE</version>-->
